--- a/wrapper.html
+++ b/wrapper.html
@@ -363,7 +363,7 @@
 
 <body
 class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.iso_code|default:'en-US'}} page-layout-{% if page.custom_fields.page_layout_style %}{{ page.custom_fields.page_layout_style }}{% else %}condensed{% endif %} {% if page.lang.is_rtl %}ak-rtl{% endif %} no-js ak-no-js body-{{ page.custom_fields.page_background_color }} {% if page.custom_fields.after_action_next_step == 'flow' %}afteraction-flow{% endif%}">
-	{% if page.custom_fields.flow_show_logo != 'N' %}
+	{% if page.custom_fields.flow_show_logo == 'Y' %}
 		<nav id="flow-logo-bar">
 			<div class="flow-logo-wrapper">
 				<span class="text-large2">
@@ -374,6 +374,10 @@ class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.is
 			</div>
 		</nav>
 		<style>
+		#flow-logo-bar {
+			position: absolute;
+			left: 0;
+		}
 
 		.flow-logo-wrapper {
 			display: flex;
