--- a/thanks.html
+++ b/thanks.html
@@ -248,6 +248,7 @@
 			let isPostDonate = false;
 			const fundraisingRegions = ['United States', 'Canada', 'United Kingdom', 'Australia', 'New Zealand', 'South Africa', 'Japan', 'France', 'Germany'];
 			const country = '{{ user.country }}';
+			const firstName = '{{ user.first_name }}' || urlParams.get('firstName');
 
 			// Render donation form if in fundraising country and not already donated
 			if (fundraisingRegions.includes(country) && source === "website") {
@@ -256,6 +257,9 @@
 				window.location.href = `${donatePageEmbedURL}${currentQueryParams}`;
 			} else if (source === "post-donation-share") {
 				// Render share ask without editing title
+				if (firstName) {
+					$('.actionFirstName').text(firstName);
+				}
 				$('#afteraction-flow-share #ak-donate-step-1').prop('checked', true);
 				show_share_tick();
 				$('#afteraction-flow-share #ak-donate-step-2').prop('checked', true);
@@ -297,7 +301,7 @@
 			// Add action_id to Facebook share URL
 			const fbShareEl = $('#afteraction-flow-share .fb-share');
 			if (fbShareEl && fbShareEl.length > 0) {
-				fbShareEl[0].href += `&action_id=${actionID}&akid=${akid}`;
+				fbShareEl[0].href += `&action_id=${actionID}`;
 			}
 
 			// Set Copy Link URL with action_id
