--- a/thanks.html
+++ b/thanks.html
@@ -234,23 +234,43 @@
 			}
 		}
 	</style>
-	{% if action.source == "website" %}
-	<div id="afteraction-flow" style="visibility: hidden; left: -999px; position: absolute; height: 0; width: 0;">
-		<iframe id="donate-iframe" style="height: 110vh; width: 100vw;" scrolling="yes"></iframe>
-	</div>
-	{% endif %}
 
 	{% include "./afteraction-flow-share.html" %}
+
 	<script>
 		jQuery(document).ready(function($){
-			const iframe = document.getElementById('donate-iframe');
+			var urlParams = new URLSearchParams(window.location.search);
+			var source = '{{ action.source }}' || urlParams.get('source');
 			const pageId = '{{ page.id }}';
 			const donateSourceCode = `aa_${pageId}_thanksflow`;
 			const donatePageEmbedURL = '{{ page.custom_fields.afteraction_donate_alternate_url }}' || 'https://act.350.org/donate/build';
+
 			let isPostDonate = false;
-			if (iframe) {
-				iframe.src = `${donatePageEmbedURL}?source=${donateSourceCode}`;
-			} else {
+			const fundraisingRegions = ['United States', 'Canada', 'United Kingdom', 'Australia', 'New Zealand', 'South Africa', 'Japan', 'France', 'Germany'];
+			const country = '{{ user.country }}';
+			const firstName = '{{ user.first_name }}' || urlParams.get('firstName');
+
+			// Render donation form if in fundraising country and not already donated
+			if (fundraisingRegions.includes(country) && source === "website") {
+				let currentQueryParams = window.location.search;
+				currentQueryParams += `&source=${donateSourceCode}`;
+				window.location.href = `${donatePageEmbedURL}${currentQueryParams}`;
+			} else if (source === "post-donation-share") {
+				// Render share ask without editing title
+				if (firstName) {
+					$('.actionFirstName').text(firstName);
+				}
+				$('#afteraction-flow-share #ak-donate-step-1').prop('checked', true);
+				show_share_tick();
+				$('#afteraction-flow-share #ak-donate-step-2').prop('checked', true);
+				show_share_tick();
+				$('.ak-donate-step-3').addClass('active-step');
+				$('.ak-donate-menu').addClass('tall');
+				$('.ak-donate-step-3').removeClass('hidden');
+				show_share_tick();
+				$('#afteraction-flow-share').show();
+			} else if (source != "website") {
+				// Render share ask if post-donation
 				isPostDonate = true;
 				$('#afteraction-flow-share #ak-donate-step-1').prop('checked', true);
 				show_share_tick();
@@ -260,20 +280,6 @@
 				$('.ak-donate-step-3').addClass('active-step');
 				$('.ak-donate-menu').addClass('tall');
 				$('.ak-donate-step-3').removeClass('hidden');
-			}
-
-			const fundraisingRegions = ['United States', 'Canada', 'United Kingdom', 'Australia', 'New Zealand', 'South Africa', 'Japan', 'France', 'Germany'];
-			const country = '{{ user.country }}';
-
-			var source = '{{ action.source }}';
-			// Render donation form if in fundraising country and not already donated
-			if (fundraisingRegions.includes(country) && source === "website") {
-				$('#afteraction-flow').addClass('afteraction-flow-show');
-				$('#afteraction-flow').show();
-			} else if (source != "website") {
-				// Render share ask if post-donation
-				$('#afteraction-flow').removeClass('afteraction-flow-show');
-				show_share_tick();
 				$('.afteraction-share-title').text('{% filter ak_text:"flow_share_step_thanks_donating" %}Thanks for your donation!{% endfilter %}');
 				$('#afteraction-flow-share').show();
 			} else {
@@ -295,7 +301,7 @@
 			// Add action_id to Facebook share URL
 			const fbShareEl = $('#afteraction-flow-share .fb-share');
 			if (fbShareEl && fbShareEl.length > 0) {
-				fbShareEl[0].href += `&action_id=${actionID}&akid=${akid}`;
+				fbShareEl[0].href += `&action_id=${actionID}`;
 			}
 
 			// Set Copy Link URL with action_id
