--- a/donate.html
+++ b/donate.html
@@ -13,6 +13,15 @@
 
 {% block content %}
 {% if page.custom_fields.after_action_next_step == "flow" %}
+{% if action.custom_fields.original_bgimage %}
+<style>
+#body-mobile-background {
+  background-image: url('{{ action.custom_fields.original_bgimage }}') !important;
+}
+</style>
+{% endif %}
+
+
 <style>
   @media screen and (min-width:720px) {
     body:is(.Signup, .Petition, .Letter, .Donation).body-blue_opaque,
@@ -21,6 +30,7 @@
       background: unset;
     }
   }
+
   #action-lead {
     max-width: 800px;
   }
@@ -243,9 +253,15 @@
     .payments-container {
       min-width: 300px !important;
     }
+    {% if action.custom_fields.original_bgimage %}
+    #body-mobile-background {
+      background-image: url('{{ action.custom_fields.original_bgimage }}') !important;
+    }
+    {% else %}
     #body-mobile-background {
       background-image: url('{{ page.custom_fields.page_background_image }}') !important;
     }
+    {% endif %}
     #ak-donation-details {
       margin: 10px;
     }
@@ -2006,6 +2022,7 @@
     var actionID = searchParams.get('action_id');
     var akid = searchParams.get('akid');
     var origPageName = searchParams.get('og_page_name');
+    var origBgImage = '{{ action.custom_fields.original_bgimage }}';
 
     if (firstName) {
       $('.actionFirstName').text(firstName);
