--- a/afteraction-flow-share.html
+++ b/afteraction-flow-share.html
@@ -233,16 +233,15 @@
         gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_em'});
       }
       var initialShareURL = e.target.href + '&source=share-ak-thanksflow-em';
-      var pageName = '{{ page.title }}';
 			var newTab = window.open('', '_blank');
       $.ajax({
         method: 'GET',
         url: initialShareURL,
       }).done(function(shareURL) {
-        var mailtoURL = `mailto:?subject=${pageName}&body=${shareURL}`;
+        var mailtoURL = `mailto:?body=${shareURL}`;
         newTab.location.href = mailtoURL;
       }).fail(function() {
-        var mailtoURL = `mailto:?subject=${pageName}&body=${window.location.href}`;
+        var mailtoURL = `mailto:?body=${window.location.href}`;
         newTab.location.href = mailtoURL;
       });
 
